[package]
name = "grin_seeder_dns_server"
version = "0.1.0"
authors = ["Quentin Le Sceller <q.lesceller@gmail.com>"]
workspace = ".."

[dependencies]
grin_seeder_util = { path = "../util"}

serde = "~1.0.8"
serde_derive = "~1.0.8"
slog = { version = "^2.0.12", features = ["max_level_trace", "release_max_level_trace"] }
trust-dns = "^0.13"
trust-dns-server = "^0.13"
